--- a/styles/architects.css
+++ b/styles/architects.css
@@ -12,6 +12,10 @@
     display: flex;
 }
 
+.text-primary {
+    color: #FF900E;
+}
+
 
 /* dark 02 */
 .text-gray {
@@ -23,8 +27,9 @@
 .text-light-gray {
     color: #727272;
 }
+
 .btn-primary {
-    background-color:#FF900E;
+    background-color: #FF900E;
     color: white;
     padding: 20px 25px;
     font-size: 1.25rem;
@@ -32,6 +37,11 @@
     border-radius: 8px;
     border: none;
 
+}
+
+.section-title {
+    font-size: 2.8rem;
+    font-weight: 700;
 }
 
 /* header styles */
@@ -81,24 +91,80 @@
     margin-bottom: 50px;
 }
 
-.banner-title{
+.banner-title {
     font-weight: 700;
     font-size: 4rem;
 }
-.banner-image{
-    width: 100%;
-}
 
-/* responsive media query */
-@media screen and (max-width: 576px) {
-    .navbar{
-        flex-direction: column;
-    }
-    
+.banner-image {
+    width: 100%;
 }
 
 /* main styles */
 main {
     max-width: 1440px;
     margin: 0 auto;
+}
+
+main>section {
+    margin-top: 130px;
+}
+
+.teams {
+    align-items: center;
+
+}
+
+.team-img-container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 24px;
+}
+
+.our-features {
+    margin-left: 100px;
+    max-width: 530px;
+}
+
+
+
+#quick-list {
+    font-weight: 500;
+}
+
+/* responsive media query */
+@media screen and (max-width: 576px) {
+
+    .navbar,
+    .teams {
+        flex-direction: column;
+    }
+
+    .team-img-container {
+        /* display: grid; */
+        grid-template-columns: repeat(1, 1fr);
+  
+
+
+    }
+
+    .our-features {
+        margin-left: 20px;
+    }
+
+
+}
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    .teams {
+        flex-direction: column;
+
+    }
+
+    .our-features {
+        margin: 50px auto;
+    }
+
+
+    
 }
