--- a/styles/architects.css
+++ b/styles/architects.css
@@ -40,6 +40,7 @@
 }
 
 .section-title {
+    margin: 5px auto;
     font-size: 2.8rem;
     font-weight: 700;
 }
@@ -131,6 +132,54 @@ main>section {
 #quick-list {
     font-weight: 500;
 }
+.facts-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.fact-card {
+    border: 1px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+
+}
+
+.fact-number {
+    font-size: 2.8em;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
+.fact-name {
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 10px;
+}
+
+.fact-description{
+    max-width: 540px;
+    margin-bottom: 35px;
+}
+/* sponsor styles */
+.sponsor-info {
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    
+
+}
+.sponsor-companies img {
+    filter: grayscale(100%);
+}
 
 /* responsive media query */
 @media screen and (max-width: 576px) {
@@ -140,12 +189,18 @@ main>section {
         flex-direction: column;
     }
 
-    .team-img-container {
+    .team-img-container, .facts-container, .sponsor-companies{
         /* display: grid; */
         grid-template-columns: repeat(1, 1fr);
   
-
-
+    }
+    .facts-container {
+        justify-items: center;
+        gap: 24px;
+    }
+    .sponsor-companies {
+        justify-items: center;
+        gap: 50px;
     }
 
     .our-features {
@@ -155,6 +210,7 @@ main>section {
 
 }
 
+
 @media screen and (min-width: 576px) and (max-width: 992px) {
     .teams {
         flex-direction: column;
@@ -163,6 +219,11 @@ main>section {
 
     .our-features {
         margin: 50px auto;
+    }
+    .sponsor-companies, .facts-container {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 50px;
+        justify-items: center;
     }
 
 
