--- a/styles/architects.css
+++ b/styles/architects.css
@@ -132,6 +132,32 @@ main>section {
 #quick-list {
     font-weight: 500;
 }
+.features {
+    gap: 140px;
+}
+
+/* feature section styles */
+#feature-section-title {
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+
+}
+.feature-card{
+    padding: 30px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+    border-radius: 80x;
+
+}
+.feature-card .feature-title {
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0px;
+    margin-bottom: 0px;
+
+
+}
+
 .facts-container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -180,6 +206,7 @@ main>section {
 .sponsor-companies img {
     filter: grayscale(100%);
 }
+
 
 /* responsive media query */
 @media screen and (max-width: 576px) {
