added experience badge and made featured section rsponsive

--- a/styles/architects.css
+++ b/styles/architects.css
@@ -157,6 +157,21 @@ main>section {
 
 
 }
+#experience-badge {
+    padding: 45px 42px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -100px;
+    margin-top: -100px;
+
+}
+#experience-year {
+    font-size: 4rem;
+    font-weight: 700;
+}
+.featured-architect img{
+    width: 100%;
+}
 
 .facts-container {
     display: grid;
@@ -212,7 +227,7 @@ main>section {
 @media screen and (max-width: 576px) {
 
     .navbar,
-    .teams {
+    .teams, .features {
         flex-direction: column;
     }
 
@@ -231,6 +246,10 @@ main>section {
     }
 
     .our-features {
+        margin-left: 20px;
+    }
+    #experience-badge{
+        margin-top: 20px;
         margin-left: 20px;
     }
 
